[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["Carlos Eduardo F Souza <carloseduardofernandes10@live.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
blue = "^0.9.1"
isort = "^5.13.2"
taskipy = "^1.10.3"


[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.5.9"
mkdocstrings = "^0.24.0"
mkdocstrings-python = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini.options]
pythonpath = "."
addopts = "--doctest-modules"

[toll.isort]
profile = "black"
line_length = 79

[tool.taskipy.tasks]
lint = "blue --check --diff . && isort --check --diff ."
docs = "mkdocs serve"
pre_test = "task lint"
test = "pytest -s -x --cov=project -vv"
post_test = "coverage html"